--- a/src/app/portal-discente/portal-discente.component.html
+++ b/src/app/portal-discente/portal-discente.component.html
@@ -1,3 +1,7 @@
-<p>
-  portal-discente works!
-</p>
+<div class="container-fluid">
+  <app-nav></app-nav>
+  <app-conteudo></app-conteudo>
+  <app-footer></app-footer>
+<div>
+
+
