--- a/src/app/portal-discente/conteudo/conteudo.component.html
+++ b/src/app/portal-discente/conteudo/conteudo.component.html
@@ -1,4 +1,19 @@
 <div class="container">
-    <h1>não durmo até terminar</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sodales lacinia orci vel elementum. Duis commodo, nisl vitae dapibus ornare, tortor odio consequat odio, a condimentum urna leo id dui. Sed ut viverra diam. Suspendisse fermentum risus leo, sit amet rhoncus turpis fermentum id. Curabitur risus nulla, tristique sit amet eros nec, pulvinar porta nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae pulvinar eros. Suspendisse a aliquet dui, at elementum mauris. Integer laoreet, nisi lacinia egestas iaculis, magna nulla placerat nisl, sed maximus odio odio eu tortor.</p>
+    <div class="row fullheight" >
+        
+        <div class="col-8 white" >
+            <div class="center-div">
+            <h1 >não durmo até terminar</h1>
+            <p class="lead ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sodales lacinia orci vel elementum. Duis commodo, nisl vitae dapibus ornare, tortor odio consequat odio, a condimentum urna leo id dui. Sed ut viverra diam. Suspendisse fermentum risus leo, sit amet rhoncus turpis fermentum id. Curabitur risus nulla, tristique sit amet eros nec, pulvinar porta nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae pulvinar eros. Suspendisse a aliquet dui, at elementum mauris. Integer laoreet, nisi lacinia egestas iaculis, magna nulla placerat nisl, sed maximus odio odio eu tortor.</p>
+            </div>
+        </div>    
+        <div class="clear-fix"></div>
+        <div class="col-4">
+            <div class="center-div">
+            <app-login></app-login>
+            </div>
+        </div>
+        
+        
+    </div>
 </div>
