--- a/src/app/portal-discente/login/login.component.html
+++ b/src/app/portal-discente/login/login.component.html
@@ -1,3 +1,25 @@
-<p>
-  login works!
-</p>
+<div class="form-login">
+    <form>
+      <div class="form-group">
+        <p>Faça login com suas credenciais do SIGAA</p>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Usuário">
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+      </div>
+      <div class="form-check">
+        <div class="row">
+            <div class="col-6">
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input">
+                  Lembrar-me
+                </label>
+            </div>
+            <div class="col-6">
+                <button type="submit" class="btn btn-primary pull-right">Entrar</button>
+            </div>
+        </div>
+      </div>
+    </form>
+</div>
+
