--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,24 @@
     padding-left: 0px;
     padding-right:0px;
 }
+
+html {
+	height: 100%;
+	/*Image only BG fallback*/
+	background: url('http://chopin.musica.ufrn.br/semufrn2/assets/img/gs.png');
+	/*background = gradient + image pattern combo*/
+	background: 
+		linear-gradient(rgba(43,45,66,0.2) ,rgba(141,153,174, 0.2), rgba(237,242,244, 0.2)), 
+		url('http://chopin.musica.ufrn.br/semufrn2/assets/img/gs.png');
+}
+body{
+	background-color: transparent;
+}
+.center-div{
+    position:absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) ;
+}
