--- a/src/app/portal-discente/conteudo/conteudo.component.html
+++ b/src/app/portal-discente/conteudo/conteudo.component.html
@@ -1,19 +1,34 @@
-<div class="container">
-    <div class="row fullheight" >
-        
-        <div class="col-8 white" >
-            <div class="center-div">
-            <h1 >não durmo até terminar</h1>
-            <p class="lead ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sodales lacinia orci vel elementum. Duis commodo, nisl vitae dapibus ornare, tortor odio consequat odio, a condimentum urna leo id dui. Sed ut viverra diam. Suspendisse fermentum risus leo, sit amet rhoncus turpis fermentum id. Curabitur risus nulla, tristique sit amet eros nec, pulvinar porta nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae pulvinar eros. Suspendisse a aliquet dui, at elementum mauris. Integer laoreet, nisi lacinia egestas iaculis, magna nulla placerat nisl, sed maximus odio odio eu tortor.</p>
-            </div>
-        </div>    
-        <div class="clear-fix"></div>
-        <div class="col-4">
-            <div class="center-div">
-            <app-login></app-login>
-            </div>
-        </div>
-        
-        
-    </div>
+<div class="row title">
+	<h1>Resumo
+	<small class="sub-title">Algumas informações sobre os currículos, disciplinas e seus períodos</small>
+	</h1>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto ">
+			<h3>Currículos</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto ">
+			<h3>Disciplinas</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-lightbulb-o fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto">
+			<h3>Orientações e dicas</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
 </div>
