--- a/src/app/portal-discente/footer/footer.component.html
+++ b/src/app/portal-discente/footer/footer.component.html
@@ -1,7 +1,41 @@
-<footer class="footer">
-  <div class="container-fluid">
-    <span class="text-muted">
-      Projeto WEB2
-    </span>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+       <h3 class="footer-title">Portal-BTI
+        <small class="sub-title">© 2017</small>
+        </h3>
+    </div>
+    <div class="col-sm-2">
+      <ul class="footer-menu">
+        <li><strong>teste1</strong></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+      </ul>
+    </div>
+    <div class="col-sm-2">
+      <ul class="footer-menu">
+        <li><strong>teste2</strong></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+      </ul>
+    </div>
+    <div class="col-sm-2">
+      <ul class="footer-menu">
+        <li><strong>teste3</strong></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+      </ul>
+    </div>
+    <div class="col-sm-2">
+      <ul class="footer-menu">
+        <li><strong>teste4</strong></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+        <li><a>asdad</a></li>
+      </ul>
+    </div>
   </div>
-</footer>
+</div>
