--- a/src/app/portal-discente/portal-discente.component.html
+++ b/src/app/portal-discente/portal-discente.component.html
@@ -1,7 +1,34 @@
 <div class="container-fluid">
-  <app-nav></app-nav>
-  <app-conteudo></app-conteudo>
-  <app-footer></app-footer>
-<div>
+  <nav>
+  	<app-nav></app-nav>
+  </nav>
+	<section id="init" class="container">
+		<app-login></app-login>
+	</section>
+	<section id="resumo" class="row">
+		<div class="container">
+			<app-conteudo></app-conteudo>
+		</div>
+	</section>
+	<section id="enfases" class="row">
+		<div class="container">
+			<app-enfases></app-enfases>
+		</div>
+	</section>
+	<section id="estagios" class="row">
+		<div class="container">
+			<app-estagios></app-estagios>
+		</div>
+	</section>
+	<section id="services" class="row">
+		<div class="container">
+			<app-services></app-services>
+		</div>
+	</section>
+	<footer id="footer" class="row">
+			<app-footer></app-footer>
+	</footer>
+</div>
+
 
 
