--- a/src/app/portal-discente/services/services.component.html
+++ b/src/app/portal-discente/services/services.component.html
@@ -1,3 +1,31 @@
-<p>
-  services works!
-</p>
+<div class="row title">
+	<h1>Outros serviços
+	<small class="sub-title">Outros serviços disponibilizados pela UFRN que podem te ajudar. </small>
+	</h1>
+</div>
+<div class="row">
+	<div class="col-xs-3 col-sm-6 col-md-3">
+		<div class="icon-center"><a href="http://sigaa.ufrn.br/" target="_blank"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></a></div>
+		<div class="caixa-texto ">
+			<h3><a href="http://sigaa.ufrn.br/" target="_blank">SIGAA</a></h3>
+		</div>
+	</div>
+	<div class="col-xs-3 col-sm-6 col-md-3">
+		<div class="icon-center"><a href="http://portal.imd.ufrn.br/" target="_blank"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></a></div>
+		<div class="caixa-texto ">
+			<h3><a href="http://portal.imd.ufrn.br/" target="_blank">Portal IMD</a></h3>
+		</div>
+	</div>
+	<div class="col-xs-3 col-sm-6 col-md-3">
+		<div class="icon-center"><a href="http://ru.ufrn.br/" target="_blank"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></a></div>
+		<div class="caixa-texto ">
+			<h3><a href="http://ru.ufrn.br/" target="_blank">Restaurante Universitário</a></h3>
+		</div>
+	</div>
+	<div class="col-xs-3 col-sm-6 col-md-3">
+		<div class="icon-center"><a href="http://ufrn.br/" target="_blank"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></a></div>
+		<div class="caixa-texto ">
+			<h3><a href="http://ufrn.br/" target="_blank">Portal da UFRN</a></h3>
+		</div>
+	</div>
+</div>
