--- a/src/app/portal-discente/enfases/enfases.component.html
+++ b/src/app/portal-discente/enfases/enfases.component.html
@@ -1,3 +1,34 @@
-<p>
-  enfases works!
-</p>
+<div class="row enfases-title">
+	<h1>Ênfases
+	<small class="sub-title">No BTI, o discente pode seguir alguma ênfase que serve como base para sua formação ofertando disciplinas obrigatórias específicas. Atualmente, Existem 8 opções de ênfases disponíveis oferecidas pelo IMD.</small>
+	</h1>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto ">
+			<h3>Opções disponíveis</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto ">
+			<h3>Como definir</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="icon-center"><i class="fa fa-lightbulb-o fa-lg" aria-hidden="true"></i></div>
+		<div class="caixa-texto">
+			<h3>Importância</h3>
+			<p>Proin rhoncus suscipit augue, porttitor blandit ex. Sed vel placerat neque. Nullam sed volutpat arcu. 
+			Maecenas vitae tortor sodales, dictum elit at, porttitor metus. Donec sagittis nec nunc vitae finibus. Aliquam erat volutpat.
+			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
+		</div>
+	</div>
+</div>
