--- a/src/app/portal-discente/footer/footer.component.css
+++ b/src/app/portal-discente/footer/footer.component.css
@@ -1,9 +1,20 @@
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
-  text-align: center;
+.footer-menu {
+  list-style-type: none;
+}
+.footer-menu li a{
+  padding: 2px 0 2px 0;
+  font-weight: 300;
+  color:rgba(255,255,255,0.4);
+}
+.footer-menu li strong{
+  font-weight:600;
+  color: #ffffff;
+}
+
+.footer-title{
+    color: #FFFFFF;
+}
+.footer-title .sub-title{
+    margin-top:0px !important;
+    padding-top:2px !important;
 }
