--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
-
+/*
 .container-fluid{
     padding-left: 0px;
     padding-right:0px;
 }
-
+*/
 html {
 	height: 100%;
 	/*Image only BG fallback*/
@@ -26,4 +26,37 @@ body{
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%) ;
+}
+.border{
+    border-top: 1px #e1e4e8 solid !important;
+}
+.title{
+    color: #000000;
+    margin:auto auto 40px auto;
+    font-weight: 300;
+}
+.sub-title{
+    margin-top:15px;
+    display:block;
+    position:relative;
+    font-size:0.5em;
+}
+.caixa-texto{
+    padding:4px;
+    box-sizing: border-box;
+     
+}
+.caixa-texto h3{
+    text-align:center;
+    margin-bottom: 16px;
+}
+.caixa-texto p{
+    text-align:justify;
+}
+.icon-center{
+    text-align:center;
+    margin-bottom:1em;
+}
+.icon-center i{
+    font-size: 6em;
 }
