conclusão da homepage

--- a/src/app/portal-discente/navbar/navbar.component.html
+++ b/src/app/portal-discente/navbar/navbar.component.html
@@ -1,12 +1,8 @@
-<div class="container-fluid background-nav navbar-animation">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg">
+<div class="container background-nav navbar-animation">
+    <nav class="navbar ">
       <a class="navbar-brand" href="#">Portal BTI</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav  ml-auto">
+        <div class="navbar-nav">
           <a  class="nav-item nav-link pageScroll active " href="#init" >Home <span class="sr-only">(current)</span></a>
           <a  class="nav-item nav-link pageScroll" href="#resumo" >Resumo</a>
           <a  class="nav-item nav-link pageScroll" href="#enfases" >Enfases</a>
@@ -15,6 +11,5 @@
         </div>
       </div>
     </nav>
-  </div>
 </div>
 
