--- a/src/app/portal-discente/portal-discente.component.html
+++ b/src/app/portal-discente/portal-discente.component.html
@@ -1,34 +1,32 @@
 <div class="container-fluid">
-  <nav>
-  	<app-nav></app-nav>
-  </nav>
-	<section id="init" class="container">
-		<app-login></app-login>
-	</section>
-	<section id="resumo" class="row">
+	<app-navbar></app-navbar>
+	<section class="row" id="boas-vindas">
 		<div class="container">
-			<app-conteudo></app-conteudo>
+			<app-boas-vindas></app-boas-vindas>
 		</div>
 	</section>
-	<section id="enfases" class="row">
+	<section class="row" id="resumo">
+		<div class="container">
+			<app-resumo></app-resumo>
+		</div>
+	</section>
+	<section class="row" id="enfases">
 		<div class="container">
 			<app-enfases></app-enfases>
 		</div>
 	</section>
-	<section id="estagios" class="row">
+	<section class="row" id="estagios">
 		<div class="container">
 			<app-estagios></app-estagios>
 		</div>
 	</section>
-	<section id="services" class="row">
+	<section class="row" id="servicos">
 		<div class="container">
-			<app-services></app-services>
+			<app-servicos></app-servicos>
 		</div>
 	</section>
-	<footer id="footer" class="row">
+	<footer class="row" id="footer">
 			<app-footer></app-footer>
 	</footer>
 </div>
-
-
 
