--- a/src/app/portal-discente/navbar/navbar.component.css
+++ b/src/app/portal-discente/navbar/navbar.component.css
@@ -19,14 +19,12 @@
 .fixed-nav{
     background-color:#000000 !important;
     padding: 0px  !important;
-    margin-bottom: 10px;
     position: fixed;
-    top:0;
-	  z-index:888;
+    display: block;
+	z-index:888;
     width: 100%;
 }
 .navbar-animation {
-    
    transition: all 1s ;
 }
 
