--- a/src/app/portal-discente/portal-discente.component.css
+++ b/src/app/portal-discente/portal-discente.component.css
@@ -1,12 +1,24 @@
-#init {
+.container-fluid {
+    padding: 0  !important;
+}
+
+#boas-vindas {
     background-color: transparent;
+    border: 0px;
     padding-top: 80px;
     padding-bottom: 80px;
 }
 
+#resumo {
+    border: 0px;
+}
+
 .row {
-    background-color:#FFFFFF;
-    padding: 3em 0 3em 0;
+    background-color: white;
+    border-top: 1px solid lightgrey;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin: 0 !important;
 }
 
 #footer {
