--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
-/*
-.container-fluid{
-    padding-left: 0px;
-    padding-right:0px;
-}
-*/
+
 html {
 	height: 100%;
 	/*Image only BG fallback*/
@@ -17,6 +12,9 @@ html {
 		url('http://chopin.musica.ufrn.br/semufrn2/assets/img/gs.png');
 }
 body{
+    width: 100%;
+    padding: 0;
+    margin: 0;
 	background-color: transparent;
 }
 .center-div{
