--- a/src/app/home/enfases/enfases.component.html
+++ b/src/app/home/enfases/enfases.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row enfases-title">
 	<h1>Ênfases
 	<small class="sub-title">No BTI, o discente pode seguir alguma ênfase que serve como base para sua formação ofertando disciplinas obrigatórias específicas. Atualmente, Existem 8 opções de ênfases disponíveis oferecidas pelo IMD.</small>
@@ -31,4 +32,5 @@
 			Cras vestibulum, arcu eget vehicula sodales, ipsum metus pretium erat, in aliquam eros augue ac lorem. Mauris maximus feugiat tincidunt.</p>
 		</div>
 	</div>
+</div>
 </div>
