--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -1,37 +1,21 @@
 <div class="container-fluid">
-	<!--<app-navbar></app-navbar>-->
-	<section class="row" id="boas-vindas">
-		<div class="container">
-			<app-tour-start></app-tour-start>
-		</div>
+	<section class="row" id="tour">
+		<tour-boas-vindas></tour-boas-vindas>
 	</section>
-	<section class="row" id="resumo">
-		<div class="container">
-			<app-curso></app-curso>
-		</div>
+	<section class="row" id="curso">
+		<tour-curso></tour-curso>
 	</section>
-	<section class="row" id="enfases">
-		<div class="container">
-			<app-ingresso></app-ingresso>
-		</div>
+	<section class="row" id="ingresso">
+		<tour-ingresso></tour-ingresso>
 	</section>
-	<section class="row" id="estagios">
-		<div class="container">
-			<app-conteudo></app-conteudo>
-		</div>
+	<section class="row" id="conteudo">
+		<tour-conteudo></tour-conteudo>
 	</section>
-	<section class="row" id="servicos">
-		<div class="container">
-			<app-enfase></app-enfase>
-		</div>
+	<section class="row" id="enfase">
+		<tour-enfase></tour-enfase>
 	</section>
-	<section class="row" id="servicos">
-		<div class="container">
-			<app-ciclos></app-ciclos>
-		</div>
+	<section class="row" id="ciclos">
+		<tour-ciclos></tour-ciclos>
 	</section>
-	<footer class="row" id="footer">
-			<app-footer></app-footer>
-	</footer>
 </div>
 
