--- a/src/app/home/boas-vindas/boas-vindas.component.html
+++ b/src/app/home/boas-vindas/boas-vindas.component.html
@@ -1,42 +1,21 @@
-<div class="row">
-	<div class="col-md-6 col-lg-8 greetings">
-		<div class="container">
-			<div class="row">
-				<h1>Seja bem-vindo(a)!</h1>
-				<p class="lead">Este é o portal do curso de Tecnologia da Informação da Universidade Federal do Rio Grande do Norte.</p>
-				<p class="lead">Ainda não é aluno? tem interesse em ingressar no curso? Faça um tour clicando no botão abaixo e você saberá tudo o que precisa para entrar nesse mundo de tecnologia.</p>
-				<div class="col-md-12 col-lg-6 get-start-div">
-					<p class="lead get-started-text"><a href="tour"><button class="btn btn-light get-started-btn">Faça um Tour!</button></a></p>
-				</div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-lg-8 greetings">
+			<h1>Seja bem-vindo(a)!</h1>
+			<p class="lead">Este é o portal do curso de Tecnologia da Informação da Universidade Federal do Rio Grande do Norte.</p>
+			<p class="lead">Ainda não é aluno e tem interesse no curso? Faça um tour clicando no botão abaixo e você encontrará tudo o que é necessário para ingressar.</p>
+			<div class="tour">
+				<a class="lead tour-btn-text" href="tour"><button class="btn btn-tour">Faça um Tour!</button></a>
 			</div>
 		</div>
-	</div>
-	<div class="col-md-6 col-lg-4">
-		<div class="container form-login">
-			<form method="post" action="/orientador">
-				<div style="text-align:center" class="form-group">
+		<div class="col-md-6 col-lg-4">
+			<div class="container form-login">
+				<div style="text-align:center">
 					<i class="fa fa-graduation-cap" aria-hidden="true"></i><br>
 					<p>Orientador Virtual</p>
-					<p>Faça login com suas credenciais do SIGAA</p>
-					<input type="text" name="user" class="form-control" id="exampleInputEmail1" placeholder="Usuário" required>
+					<a href="/api/login"><button class="btn btn-primary">Entrar com o SIGAA</button></a>
 				</div>
-				<div class="form-group">
-					<input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-				</div>
-				<div class="form-check">
-					<div class="row">
-							<div class="col-md-6 col-lg-8">
-									<label class="form-check-label">
-										<input type="checkbox" class="form-check-input">
-										Lembrar-me
-									</label>
-							</div>
-							<div class="col-md-6 col-lg-4">
-									<button type="submit" class="btn btn-primary pull-right">Entrar</button>
-							</div>
-					</div>
-				</div>
-			</form>
+			</div>
 		</div>
 	</div>
 </div>
