--- a/src/app/home/estagios/estagios.component.html
+++ b/src/app/home/estagios/estagios.component.html
@@ -1,21 +1,23 @@
-<div class="row estagios-title">
-	<h1>Estágios
-	<small class="sub-title">Algumas informações úteis que para ajudar o aluno a estagiar pelo Instituto Metrópole Digital.</small>
-	</h1>
-</div>
-<div class="row">
-	<div class="col-sm-6">
-		<div class="icon-center"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></div>
-		<div class="caixa-texto ">
-			<h3>Requisitos</h3>
-			<p>Informações sobre os requisitos para poder estagiar pelo IMD</p>
-		</div>
+<div class="container">
+	<div class="row estagios-title">
+		<h1>Estágios
+		<small class="sub-title">Algumas informações úteis que para ajudar o aluno a estagiar pelo Instituto Metrópole Digital.</small>
+		</h1>
 	</div>
-	<div class="col-sm-6">
-		<div class="icon-center"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></div>
-		<div class="caixa-texto">
-			<h3>Mural de Vagas</h3>
-			<p>Vagas de estágios disponíveis, oferecidas pela UFRN e outras empresas.</p>
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="icon-center"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></div>
+			<div class="caixa-texto ">
+				<h3>Requisitos</h3>
+				<p>Informações sobre os requisitos para poder estagiar pelo IMD</p>
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<div class="icon-center"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></div>
+			<div class="caixa-texto">
+				<h3>Mural de Vagas</h3>
+				<p>Vagas de estágios disponíveis, oferecidas pela UFRN e outras empresas.</p>
+			</div>
 		</div>
 	</div>
 </div>
