--- a/src/app/home/boas-vindas/boas-vindas.component.html
+++ b/src/app/home/boas-vindas/boas-vindas.component.html
@@ -8,14 +8,10 @@
 				<a class="lead tour-btn-text" href="tour"><button class="btn btn-tour">Faça um Tour!</button></a>
 			</div>
 		</div>
-		<div class="col-md-6 col-lg-4">
-			<div class="container form-login">
-				<div style="text-align:center">
-					<i class="fa fa-graduation-cap" aria-hidden="true"></i><br>
-					<p>Orientador Virtual</p>
-					<a href="/api/login"><button class="btn btn-primary">Entrar com o SIGAA</button></a>
-				</div>
-			</div>
+		<div class="col-md-6 col-lg-4 login">
+			<i class="fa fa-graduation-cap" aria-hidden="true"></i><br>
+			<p>Orientador Virtual</p>
+			<a href="/api/login"><button class="btn btn-primary">Entrar com o SIGAA</button></a>
 		</div>
 	</div>
 </div>
