--- a/src/app/disciplinas/disciplinas.component.css
+++ b/src/app/disciplinas/disciplinas.component.css
@@ -1,3 +1,5 @@
 .container-fluid {
-    background-color: white;
+    background-color: rgba(0,0,0,0.4);
+    color: white;
+    padding-top: 60px
 }
