--- a/src/app/disciplinas/disciplinas.component.html
+++ b/src/app/disciplinas/disciplinas.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
-  <h1>Digite o código da disciplina para obter resposta</h1>
+  <h1>Disciplinas</h1>
+  <p>Consulte informações sobre as disciplinas.</p>
+  <h1>Digite o código da disciplina para pesquisar</h1>
   <p>
     <input type="text" name="codigo" placeholder="Código" #codigo/>
     <button (click)="select(codigo.value)">Procurar</button>
   </p>
+  <router-outlet></router-outlet>
 </div>
