--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,6 @@
 
+
+
   <nav class=" navbar navbar-expand-lg navbar-light background-nav" [class.fixed]="navIsFixed"  >
     <div class="container">
       <a class="navbar-brand" scrollTo="boas-vindas" href="#">Portal BTI</a>
@@ -6,21 +8,9 @@
         <span class="navbar-toggler-icon" ></span>
       </button>
       <div class="collapse navbar-collapse" [ngClass]="{ 'collapse': isIn }" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#" scrollTo="boas-vindas">Início <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" scrollTo="resumo">Resumo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" scrollTo="enfases">Ênfases</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" scrollTo="estagios">Estágios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" scrollTo="servicos">Outros Serviços</a>
+        <ul class="navbar-nav" >
+          <li class="nav-item active" *ngFor="let nome of nomes_menu; let i = index">
+            <a class="nav-link" href="#"  scrollTo="{{componentes[i]}}">{{nome}}  <span class="sr-only"></span></a>
           </li>
         </ul>
       </div>
