conexão com a api do sigaa

--- a/src/app/estagios/estagios.component.html
+++ b/src/app/estagios/estagios.component.html
@@ -1,3 +1,7 @@
-<p>
-  estagios works!
-</p>
+<section class="row" id="requisitos">
+    <div class="col-sm-12">
+        <div class="container">
+          teste
+        </div>
+    </div>
+</section>
