--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
   <nav class=" navbar navbar-expand-lg navbar-light background-nav" [class.fixed]="navIsFixed"  >
     <div class="container">
-      <a class="navbar-brand" scrollTo="boas-vindas" href="#">Portal BTI</a>
+      <a class="navbar-brand" scrollTo="boas-vindas" href="\">Portal BTI</a>
       <button class="navbar-toggler" (click)="toggleState()"  type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" ></span>
       </button>
