--- a/src/app/home/boas-vindas/boas-vindas.component.html
+++ b/src/app/home/boas-vindas/boas-vindas.component.html
@@ -11,7 +11,7 @@
 		<div class="col-md-6 col-lg-4 login">
 			<i class="fa fa-graduation-cap" aria-hidden="true"></i><br>
 			<p>Orientador Virtual</p>
-			<a href="/api/login"><button class="btn btn-primary">Entrar com o SIGAA</button></a>
+			<button (click)="redirect()" class="btn btn-primary">Entrar com o SIGAA</button>
 		</div>
 	</div>
 </div>
