--- a/src/app/orientador/orientador.component.html
+++ b/src/app/orientador/orientador.component.html
@@ -1,46 +1,3 @@
-<style>
-	.perfil-title{
-		
-		border-bottom: 1px solid rgb(233,236,239);
-		margin-bottom:40px;
-	}
-	.perfil-title h3{
-		font-weight: 300;
-	}
-	.first-div-container{
-		padding-top:3em;
-		padding-bottom:3em;
-		color:white;
-		text-shadow: 2px 2px #000000;
-	}
-.correcao-menu{
-	padding-top:50px;
-}
-#perfil{
-	background-color:white;
-}
-.section-content-ajust{
-	padding-top:40px;
-	padding-bottom:40px;
-}
-.welcome-name{
-	text-decoration:none !important;
-  cursor:pointer;
-  color:rgb(0,123,255) !important;
-  
-
-}
-.welcome-name:hover{
-	text-decoration:underline !important;
-  text-shadow: 1px 1px 1px #555;
-}
-.box-perfil{
-	padding:1px;
-	border: 1px solid rgb(233,236,239);
-	border-radius: 10px;
-}
-
-</style>
 <main class="correcao-menu">
 	<section>
 		<div class="container">
@@ -54,16 +11,12 @@
 		</div>
 	</section>
 	<section id="perfil" class="section-content-ajust">
-		<div class="container" >
+		<div class="container" *ngIf="data_received">
 			<div class="row">
 				<div class="col-12">
 					<div class="perfil-title">
-						<a class="welcome-name" data-toggle="collapse" (click)="toggleState()" aria-expanded="false" aria-controls="perfil" title="Clique para ver seu perfil!"><h3>Bem-vindo, {{Aluno.nome}}<i class="fa fa-eye" aria-hidden="true"></i></h3></a>
-						
+						<a class="welcome-name" data-toggle="collapse" (click)="toggleState()" aria-expanded="false" aria-controls="perfil" title="Clique para ver seu perfil!"><h3>Bem-vindo, {{discente.nome}}<i class="fa fa-eye" aria-hidden="true"></i></h3></a>
 					</div>
-					
-					
-
 				</div>
 			</div>
 			<!-- vou colocar essa div de baixo pra aparecer dps que clicar no "bem vindo fulano"-->
@@ -79,22 +32,22 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-12">
-								<strong>CPF</strong> {{Aluno.cpf}}
+								<strong>CPF</strong> {{discente.cpf}}
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-sm-12">
-								<strong>Login SIGAA</strong>  {{Aluno.username}}
+								<strong>Login SIGAA</strong>  {{discente.username}}
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-sm-12">
-								<strong>ID Discente</strong> {{Aluno.id_discente}}
+								<strong>ID Discente</strong> {{discente.id_discente}}
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-sm-12">
-								<strong>Periodo Atual</strong> {{Aluno.semestre[1]}}
+								<strong>Periodo Atual</strong> {{discente.semestre[1]}}
 							</div>
 						</div>
 					</div>
@@ -114,8 +67,8 @@
 								      <th scope="col">Código</th>
 								    </tr>
 								  </thead>
-								  <tbody>
-								    <tr *ngFor="let turma of Aluno.turmas">
+								  <tbody *ngIf="data_received">
+								    <tr *ngFor="let turma of discente.turmas">
 								    	<td>{{turma['id-componente']}}</td>
 								      <td>{{turma['nome-componente']}}</td>
 								      <td>{{turma['descricao-horario']}}</td>
@@ -124,14 +77,13 @@
 								  </tbody>
 								</table>
 							</div>
-							
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-3">
-					<button class="btn btn-dark" (click)="navigate('/meus-semestres')">Meus Semestres</button>
+					<button class="btn btn-dark" routerLink="meus-semestres">Meus Semestres</button>
 				</div>
 				<div class="col-sm-3">
 					<button class="btn btn-dark">teste</button>
@@ -143,10 +95,7 @@
 					<button class="btn btn-dark">teste</button>
 				</div>
 			</div>
-			
+			<router-outlet></router-outlet>
 		</div>
 	</section>
-	
 </main>
-
-
