new navbar links

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,6 +9,7 @@
           <li class="nav-item active"><a class="nav-link" routerLink="">Início<span class="sr-only"></span></a></li>
           <li class="nav-item active"><a class="nav-link" routerLink="tour">Tour<span class="sr-only"></span></a></li>
           <li class="nav-item active"><a class="nav-link" routerLink="disciplinas">Disciplinas<span class="sr-only"></span></a></li>
+          <li class="nav-item active"><a class="nav-link" routerLink="mural-de-vagas">Mural de Vagas<span class="sr-only"></span></a></li>
           <li class="nav-item active"><a class="nav-link" routerLink="orientador">Orientador<span class="sr-only"></span></a></li>
           <!--
           <li class="nav-item active" *ngFor="let nome of nomes_menu; let i = index">
