--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-       <h3 class="footer-title"><a href="/">Portal-BTI</a>
+       <h3 class="footer-title"><a routerLink="">Portal-BTI</a>
         <small class="sub-title">© 2017</small>
         </h3>
     </div>
