front end fixed

--- a/src/app/disciplinas/disciplina/disciplina.component.html
+++ b/src/app/disciplinas/disciplina/disciplina.component.html
@@ -1,15 +1,37 @@
-<div class="container-fluid">
-    <h1>Disciplina {{codigo}}</h1>
-    <div class="disciplina" *ngIf="data_received">
-        <p>Nome: {{disciplina['nome']}}</p>
-        <p>Código: {{disciplina['codigo']}}</p>
-        <p>Equivalentes: {{disciplina['equivalentes']}}</p>
-        <p>Pré-requisitos: {{disciplina['pre-requisitos']}}</p>
-        <p>Có-requisitos: {{disciplina['co-requisitos']}}</p>
-        <p>Departamento: {{disciplina['departamento']}}</p>
-        <p>Carga Horária: {{disciplina['carga-horaria-total']}}h</p>
-        <ul *ngIf="disciplina['componentesBloco']" >Bloco:
-            <li *ngFor="let bloco of disciplina['componentesBloco']"><p>{{bloco['codigo']}}</p></li>
-        </ul>
-    </div>
-</div>
+<section id="disciplina" class="section-content-ajust">
+	<div class="container">
+		<div class="row">
+			<div class="col-12"><h1>Disciplina {{codigo}}</h1></div>
+		</div>
+		
+		<div class="row">
+			<div class="col-12">
+				<div  *ngIf="data_received; else carregando">
+					<p>Nome: {{disciplina['nome']}}</p>
+					<p>Código: {{disciplina['codigo']}}</p>
+					<p>Equivalentes: {{disciplina['equivalentes']}}</p>
+					<p>Pré-requisitos: {{disciplina['pre-requisitos']}}</p>
+					<p>Có-requisitos: {{disciplina['co-requisitos']}}</p>
+					<p>Departamento: {{disciplina['departamento']}}</p>
+					<p>Carga Horária: {{disciplina['carga-horaria-total']}}h</p>
+					<ul *ngIf="disciplina['componentesBloco']" >Bloco:
+						<li *ngFor="let bloco of disciplina['componentesBloco']"><p>{{bloco['codigo']}}</p></li>
+					</ul>
+				</div>
+				
+				<ng-template #carregando>
+					<div class="row" *ngIf="retornou_erro; else test">
+						<div class="col-12">
+							<div class="alert alert-danger" role="alert">
+								{{error_msg}}
+							</div>
+						</div>
+					</div>
+					<ng-template #test>
+						Carregando conteúdo...
+					</ng-template>
+				</ng-template>
+			</div>
+		</div>
+	</div>
+</section>
