--- a/src/app/disciplinas/disciplinas.component.css
+++ b/src/app/disciplinas/disciplinas.component.css
@@ -1,5 +1,27 @@
-.container-fluid {
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    padding-top: 60px
+
+.first-div-container{
+	padding-top:3em;
+	padding-bottom:3em;
+	color:white;
+	text-shadow: 2px 2px #000000;
+
+}
+.sub-title{
+    font-size:.4em;
+}
+.correcao-menu{
+	padding-top:50px;
+}
+#conteudo{
+	background-color:white;
+}
+.section-content-ajust{
+	padding-top:40px;
+	padding-bottom:40px;
+}
+.welcome-name{
+    text-decoration:none !important;
+    font-weight:300;
+    color:rgb(0,0,0) !important;
+ 
 }
