front end fixed

--- a/src/app/home/resumo/resumo.component.html
+++ b/src/app/home/resumo/resumo.component.html
@@ -15,9 +15,9 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			<div class="icon-center"><a href="/disciplinas"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></a></div>
+			<div class="icon-center"><a routerLink="disciplinas"><i class="fa fa-suitcase fa-lg" aria-hidden="true"></i></a></div>
 			<div class="caixa-texto ">
-				<h3><a href="/disciplinas">Disciplinas</a></h3>
+				<h3><a routerLink="disciplinas">Disciplinas</a></h3>
 				<p>Consulte as disciplinas ofertadas pela UFRN e seus detalhes.</p>
 			</div>
 		</div>
